--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Social Counters</title>
+    <title>YouTube Counters</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.4/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <body class="bg-gray-100 flex flex-col min-h-screen">
     <!-- Menú Superior -->
     <header class="bg-red-700 text-white py-4">
         <div class="container mx-auto">
-            <h1 class="text-2xl font-semibold text-center">Social Counters - YouTube</h1>
+            <h1 class="text-2xl font-semibold text-center">YouTube Counters</h1>
         </div>
     </header>
 
@@ -34,7 +34,7 @@
     <!-- Footer -->
     <footer class="bg-red-700 text-white py-2">
         <div class="container mx-auto text-center">
-            <a href="https://marcosklender.com" target="_blank" class="font-semibold text-xs">© 2023 MarcosKlender | Desde 🇪🇨 para el 🌎</a>
+            <a href="https://marcosklender.com" target="_blank" class="font-semibold text-xs">© 2024 MarcosKlender | Ningún derecho reservado.</a>
         </div>
     </footer>
 
